<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:background="@drawable/background_login"
    tools:context="com.vsa.fromthebench.Dashboard"
    android:gravity="center_horizontal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/dashboard_left_imageview"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lateral_izq"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/dashboard_right_imageview"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lateral_der"
            android:visibility="invisible"
            />
        <ImageView
            android:id="@+id/logo_ftb_imageview"
            android:layout_gravity="top|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_ftb"

            />
    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:id="@+id/about_me_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/about_me"
            android:background="@drawable/button_acercademi"
            style="@style/text_button" />

        <Button
            android:id="@+id/procon_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/procon"
            android:background="@drawable/button_procon"
            style="@style/text_button" />

        <Button
            android:id="@+id/empty_cache_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/empty_cache"
            android:background="@drawable/button_cache"
            style="@style/text_button" />

        <Button
            android:id="@+id/close_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_session"
            android:background="@drawable/button_cerrarsesion"
            style="@style/text_button" />
    </LinearLayout>


</RelativeLayout>
